src_old/objects/QuestionVariant__c.object
<CustomObject>
    <description>Question Variant defines a variant to a Question, such as language. Question Variant is related to Question and Variant.</description>
    <fields>
        <fullName>QuestionText__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>QuestionsVariant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Variant</label>
        <referenceTo>Variant__c</referenceTo>
        <relationshipName>QuestionsVariant</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Question Variant</label>
    <nameField>
        <displayFormat>QVAR-{000000000}</displayFormat>
        <label>QuestionVariant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions Variant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>